k8s-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: hotsauce
  name: hotsauce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hotsauce
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: hotsauce
    spec:
      containers:
      - image: rexroof/hotsauce
        name: hotsauce
        resources: {}
status: {}
